<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Offline Meter Reader</string>
    <string name="state_patrol">Estado: patrullaje</string>
    <string name="state_locking">Estado: fijación</string>
    <string name="state_processing">Estado: procesamiento</string>
    <string name="state_ready">Estado: lectura lista</string>
    <string name="state_error">Estado: error</string>
    <string name="result_placeholder">Lectura: --</string>
    <string name="hint_patrol">Apunta al display. Lectura continua activada.</string>
    <string name="retry">Reintentar</string>
    <string name="accept">Aceptar lectura</string>
    <string name="mode_live">🎥 En vivo</string>
    <string name="mode_photo">📷 Foto</string>
    <string name="capture">Capturar</string>
    <string name="detector_display">🔲 Display + números</string>
    <string name="detector_digits_only">🔢 Números en pantalla completa</string>
</resources>
